Improved SessionCreation code in ConnectionContext. Improved server proxy callback code.

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -56,7 +56,7 @@
     <Compile Include="TaskHelpersExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ProjectsTFIS\Basilisk\DynamicProxy\Core\Telerik.DynamicProxy.csproj">
+    <ProjectReference Include="..\..\..\ProjectsTFIS\Basilisk\DynamicProxy\Core\Telerik.DynamicProxy.csproj">
       <Project>{524690BE-C91C-430C-B560-86B22E8F6B12}</Project>
       <Name>Telerik.DynamicProxy</Name>
     </ProjectReference>
