--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Rx-Main" version="2.0.21114" />
   <package id="SignalR" version="0.5.3" />
 </packages>
