--- a/LongRunningSignalR/LongRunningSignalR.csproj
+++ b/LongRunningSignalR/LongRunningSignalR.csproj
@@ -44,18 +44,18 @@
     </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\temp\SignalR\src\Microsoft.AspNet.SignalR.Core\bin\Debug\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <HintPath>..\..\SignalR\src\Microsoft.AspNet.SignalR.Core\bin\Debug\Microsoft.AspNet.SignalR.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.Owin">
-      <HintPath>..\..\temp\SignalR\src\Microsoft.AspNet.SignalR.Owin\bin\Debug\Microsoft.AspNet.SignalR.Owin.dll</HintPath>
+      <HintPath>..\..\SignalR\src\Microsoft.AspNet.SignalR.Owin\bin\Debug\Microsoft.AspNet.SignalR.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.SignalR.SystemWeb">
-      <HintPath>..\..\temp\SignalR\src\Microsoft.AspNet.SignalR.SystemWeb\bin\Debug\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+      <HintPath>..\..\SignalR\src\Microsoft.AspNet.SignalR.SystemWeb\bin\Debug\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\temp\SignalR\src\Microsoft.AspNet.SignalR.SystemWeb\bin\Debug\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+      <HintPath>..\..\SignalR\src\Microsoft.AspNet.SignalR.SystemWeb\bin\Debug\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -73,6 +73,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\packages\Rx-Core.2.0.21114\lib\Net45\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\packages\Rx-Interfaces.2.0.21114\lib\Net45\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\packages\Rx-Linq.2.0.21114\lib\Net45\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\packages\Rx-PlatformServices.2.0.21114\lib\Net45\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -134,7 +146,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="CallbackBase.cs" />
-    <Compile Include="CallbackMethodInterceptor.cs" />
     <Compile Include="ConnectionContext.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -142,13 +153,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="IConnectionContext.cs" />
-    <Compile Include="JsonSerializerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceConnection.cs" />
     <Compile Include="Services\BuildService.cs" />
     <Compile Include="Services\BuildSession.cs" />
-    <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
