--- a/LongRunningSignalR/packages.config
+++ b/LongRunningSignalR/packages.config
@@ -11,5 +11,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Rx-Core" version="2.0.21114" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.0.21114" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.0.21114" targetFramework="net45" />
+  <package id="Rx-Main" version="2.0.21114" targetFramework="net45" />
+  <package id="Rx-PlatformServices" version="2.0.21114" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
