--- a/SignalRClient/SignalRClient.csproj
+++ b/SignalRClient/SignalRClient.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.SignalR.Client">
-      <HintPath>..\..\temp\SignalR\src\Microsoft.AspNet.SignalR.Client\bin\Debug\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+      <HintPath>..\..\SignalR\src\Microsoft.AspNet.SignalR.Client\bin\Debug\Microsoft.AspNet.SignalR.Client.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -41,6 +41,18 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Reactive.Core">
+      <HintPath>..\packages\Rx-Core.2.0.21114\lib\Net45\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Interfaces">
+      <HintPath>..\packages\Rx-Interfaces.2.0.21114\lib\Net45\System.Reactive.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq">
+      <HintPath>..\packages\Rx-Linq.2.0.21114\lib\Net45\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.PlatformServices">
+      <HintPath>..\packages\Rx-PlatformServices.2.0.21114\lib\Net45\System.Reactive.PlatformServices.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,16 +62,13 @@
   <ItemGroup>
     <Compile Include="DuplexOperationExecutor.cs" />
     <Compile Include="HttpOperationContext.cs" />
-    <Compile Include="HttpOperationExecutor.cs" />
-    <Compile Include="IHttpOperationContext.cs" />
-    <Compile Include="IOperationExecutor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SessionProxyMethodInterceptor.cs" />
-    <Compile Include="TaskCompletionSource.cs" />
+    <Compile Include="SessionCreationInterceptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\ProjectsTFIS\Basilisk\DynamicProxy\Core\Telerik.DynamicProxy.csproj">
