--- a/DynamicProxy/DynamicProxy.Tests/Telerik.DynamicProxy.Tests.csproj
+++ b/DynamicProxy/DynamicProxy.Tests/Telerik.DynamicProxy.Tests.csproj
@@ -1,16 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3E522DBB-A505-407D-93E2-BBDC6AAC88DF}</ProjectGuid>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{4742A67C-7382-4FFB-A041-5CEA8178EB6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Common</RootNamespace>
-    <AssemblyName>Common</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Telerik.DynamicProxy.Tests</RootNamespace>
+    <AssemblyName>Telerik.DynamicProxy.Tests</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,42 +35,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\packages\Rx-Interfaces.2.0.21114\lib\Net45\System.Reactive.Interfaces.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\References\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionExecutor.cs" />
-    <Compile Include="BuildData.cs" />
-    <Compile Include="BuildResult.cs" />
-    <Compile Include="DynamicProxyFactory.cs" />
-    <Compile Include="IBuildClientCallback.cs" />
-    <Compile Include="IBuildContract.cs" />
-    <Compile Include="IBuildSession.cs" />
-    <Compile Include="InvocationExtensions.cs" />
-    <Compile Include="IOperationDescriptor.cs" />
-    <Compile Include="IOperationSession.cs" />
-    <Compile Include="JsonSerializerExtensions.cs" />
-    <Compile Include="MethodInfoExtensions.cs" />
-    <Compile Include="OperationDescriptor.cs" />
-    <Compile Include="OperationDescriptorInterceptor.cs" />
+    <Compile Include="InterceptionFixture.cs" />
+    <Compile Include="OutputArgFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProxyBase.cs" />
-    <Compile Include="TaskHelpers.cs" />
-    <Compile Include="TaskHelpersExtensions.cs" />
+    <Compile Include="ReturnValueFixture.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DynamicProxy\Core\Telerik.DynamicProxy.csproj">
+    <ProjectReference Include="..\Core\Telerik.DynamicProxy.csproj">
       <Project>{524690BE-C91C-430C-B560-86B22E8F6B12}</Project>
       <Name>Telerik.DynamicProxy</Name>
     </ProjectReference>
